--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Meta tags and stylesheet links -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <title>Item Lister</title>
+  
 </head>
 <body>
   <header id="main-header" class="bg-success text-white p-4 mb-3">
@@ -11,31 +15,21 @@
     </div>
   </header>
   <div class="container">
-    <div id="main" class="card card-body">
-      <h2 class="title">Add Items</h2>
-      <form class="form-inline mb-3">
-        <input type="text" class="form-control mr-2">
-        <input type="submit" class="btn btn-dark" value="Submit">
-      </form>
-      <h2 class="title">Items</h2>
-      <ul id="items" class="list-group">
-        <li class="list-group-item">Item 1</li>
-        <li class="list-group-item">Item 2</li>
-        <li class="list-group-item">Item 3</li>
-        <li class="list-group-item">Item 4</li>
-        <li class="list-group-item" id="new-item">New Item</li> <!-- New li element -->
-      </ul>
-    </div>
+   <div id="main" class="card card-body">
+    <h2 class="title">Add Items</h2>
+    <form class="form-inline mb-3">
+      <input type="text" class="form-control mr-2">
+      <input type="submit" class="btn btn-dark" value="Submit">
+    </form>
+    <h2 class="title">Items</h2>
+    <ul id="items" class="list-group">
+      <li class="list-group-item">Item 1</li>
+      <li class="list-group-item">Item 2</li>
+      <li class="list-group-item">Item 3</li>
+      <li class="list-group-item">Item 4</li>
+    </ul>
+   </div>
   </div>
-  <script>
-    
-var items = document.getElementsByClassName('list-group-item');
-var newItem = items[items.length - 1]; 
-newItem.innerHTML = 'Updated Item';
-var items = document.getElementsByTagName('li');
-var newItem = items[items.length - 1]; 
-newItem.innerHTML = 'Updated Item';
-
-  </script>
+  <script src="app.js"></script>
 </body>
 </html>
